# omama_manager

./: .gitignore  Cargo.toml  LICENSE
assets/: ochat_schema.surql  odoc_schema.surql
src/: lib.rs
src/chat/: message.rs  mod.rs  orchestrate.rs
src/database/: chat_db_model.rs  creation.rs  mod.rs  queries.rs
src/rag/: generation.rs  indexing.rs  mod.rs  query.rs  retrieval.rs
src/service_utils/: mod.rs
src/service_utils/check/: installed.rs  mod.rs  running.rs
src/service_utils/install/: linux.rs  mod.rs  wind_mac.rs
src/service_utils/models_manager/: mod.rs  model_crud.rs  o_models_info.rs
tests/: unitest.rs
