[package]
name = "omama_manager"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
ollama_td = "0.3.0"
ollama_models_info_fetcher = "0.1.0"
zip-extract = "0.2.1"
zip = "2.2.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rig-core = "0.9.0"
schemars = "0.8.21"
thiserror = "2.0.11"
ollama-rs = { version = "0.2.5", features = ["stream"] }
once_cell = "1.20.3"
tokio-stream = "0.1.17"
