[package]
name = "omama_manager"
version = "0.1.1"
edition = "2024"
authors = ["Allawiii"]

description = "omama manager for managing conversation with ollama models."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ALAWIII/omama_manager"

[dependencies]

tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
ollama_td = "0.4.0"
ollama_models_info_fetcher = "0.1.2"
zip-extract = "0.2.1"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

schemars = "0.8.21"
thiserror = "2.0.11"
ollama-rs = { version = "0.2.5", features = ["stream"] }
once_cell = "1.20.3"
tokio-stream = "0.1.17"
rig-surrealdb = "0.1.2"
rig-core = "0.10.0"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
rust-embed = "8.6.0"
chrono = "0.4.40"
nanoid = "0.4.0"
serde_with = "3.12.0"
anyhow = "1.0.97"

[dev-dependencies]
zip = "2.2.2"
